# tagscraper

./: .gitignore  Cargo.toml  README.md  __main__.spec  init.py  main.py  music.py  music.txt  scrape.py  setup.py
.github/workflows/: rust.yml
musicscraper/: __init__.py  __main__.py  artist.py  pretty.py  scraper.py
src/: album.rs  artist.rs  main.rs  tags.rs  track.rs
tagscraper/: __init__.py  __main__.py  scanner.py  scraper.py  strings.py
