[package]
name = "tagscraper"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiotags = "0.2.7182"
clap = { version = "3.0.10", features = ["derive"] }
walkdir = "2.2.2"
shellexpand = "1.0.0"
num_enum = "0.5.6"

[[bin]]
name = "tagscraper"
path = "src/main.rs"
